--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "borys/chekushka",
     "require-dev": {
-        "phpunit/phpunit": "^5.3"
+        "phpunit/phpunit": "5.6.*"
     },
     "license": "MIT",
     "authors": [
