--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
 	"name": "bvengerov/chekushka",
 	"require": {
 		"php": "^5.6 || ^7.0",
-		"symfony/console": "~2.5|~3.0"
+		"symfony/console": "~2.5|~3.0",
+		"nikic/php-parser": "^3.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0"
